# multiverse

./: .dockerignore  .env  .gitignore  ARCHITECTURAL_REVIEW.md  BUG_REPORT.md  CHANGELOG.md  CODEBASE_GLOSSARY.md  CRITIQUE_OF_AUDIT.md  GUIStrategy.md  IMPLEMENTATION_DELIVERY_PLAN.md  LEGACY.md  Makefile  PRODUCTION_READINESS_AUDIT.md  README.md  STRATEGY.md  config_alldatasets.json  data_loading_sample_notebook.ipynb  docker-compose.yml  docker_doc.md  dockerfile  environment.yml  generated_config.json  guifeatures_todo.md  issuetracker.md  mkdocs.yaml  model_registry.json  multiverse.config.example.yaml  multiverse.config.yaml  mvexp_state.db  mvexp_state.db-shm  mvexp_state.db-wal  optuna_demo.db  orphans.md  pyproject.toml  requirements.txt  run_manifest.yaml  runner.py  setup.py  store.dvc
.github/workflows/: docs.yml
.streamlit/: config.toml
containers/mofa/: dockerfile
containers/mowgli/: dockerfile
containers/multivi/: dockerfile
containers/pca/: dockerfile
docker-env/: cobolt.Dockerfile  entrypoint-mlflow.sh  entrypoint-optuna.sh  environment-evaluation.yml  environment-multivi.yml  environment-totalvi.yml  evaluation.Dockerfile  mlflow.Dockerfile  mofa.Dockerfile  mowgli.Dockerfile  multivi.Dockerfile  optuna.Dockerfile  pca.Dockerfile  requirements-cobolt.txt  requirements-evaluation.txt  requirements-mofa.txt  requirements-mowgli.txt  requirements-multivi.txt  requirements-pca.txt  streamlit.Dockerfile  totalvi.Dockerfile
docs/: ADDING_A_MODEL.md  ARCHITECTURE.md  BENCHMARKING.md  CONTRIBUTING.md  DATA_PREPARATION.md  DATA_REGISTRATION.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  GUI.md  MODEL_CONTAINERS.md  MODEL_CONTAINER_CONTRACT.md  MODEL_CONTRACT.md  MODEL_REGISTRATION.md  OBSERVABILITY.md  RUNNER.md  RUN_MANIFEST.md  index.md
docs/adr/: 0001-mvd-platform-assumptions.md
docs/reference/: EVALUATION_METRICS.md  MODELS_GLOSSARY.md  WORKFLOW.md
multiverse/: __init__.py  asset_registry.py  builder.py  cli_entrypoints.py  config.py  config_schema.py  data_utils.py  dataloader.py  evaluate.py  guesser.py  gui.py  gui_artifacts.py  gui_navigation.py  gui_state.py  gui_telemetry.py  gui_utils.py  index_projection.py  ingestion.py  logging_utils.py  main.py  migrate_data.py  mlflow_sdk.py  models_ingest.py  multiverse_config.py  ports.py  registry.py  registry_db.py  state_paths.py  tracking.py  utils.py
multiverse/apptainer/: __init__.py  engine.py  fake.py  images.py  state.py
multiverse/artifact/: __init__.py  bundle.py  checksums.py  errors.py  ids.py  image_identity.py  manifest.py  timestamps.py  validation.py
multiverse/broker/: __init__.py  broker.py  observer.py  pressure.py
multiverse/client/: __init__.py  in_process.py  protocol.py  socket_client.py  socket_server.py
multiverse/contract/: __init__.py  job_spec.py  paths.py
multiverse/docker_supervisor/: __init__.py  cancel_saga.py  client.py  errors.py  labels.py  leases.py  supervisor.py
multiverse/doctor/: __init__.py  engines_probe.py  health_probes.py  projection_probe.py  report.py  reservation_probe.py  slurm_probe.py  state_paths_probe.py  storage_probes.py
multiverse/evaluation/: __init__.py  cohort.py  docker_runner.py  result.py
multiverse/gc/: __init__.py  apply.py  candidates.py  errors.py  plan.py  tier1.py
multiverse/index/: __init__.py  rebuilder.py  sqlite_index.py
multiverse/journal/: __init__.py  errors.py  layout.py  reader.py  record.py  writer.py
multiverse/models/: base.py  cobolt.py  metrics_utils.py  mofa.py  mowgli.py  multivi.py  pca.py  runtime_io.py  totalvi.py
multiverse/mvd/: __init__.py  api.py  docker_executor.py  events.py  executor.py  kernel.py  runs.py  slurm_executor.py  state.py
multiverse/projection/: __init__.py  base.py  mlflow_sync.py
multiverse/promotion/: __init__.py  errors.py  fsutil.py  layout.py  quarantine.py  saga.py  tokens.py
multiverse/registration/: __init__.py  errors.py  paths.py  privileges.py  trust.py  validator.py
multiverse/runner/: __init__.py  cli.py  docker_runner.py  local_runner.py  mvd_entrypoint.py  mvd_inprocess.py  (+2 more)
schemas/: hyperparameters.schema.json
sdk/mvr-worker/: pyproject.toml
sdk/mvr-worker/mvr_worker/: __init__.py  base.py  device.py  epoch_logger.py  io.py  logging.py
tests/: __init__.py  conftest.py  simulate_dashboard.py  test_config_dummy.json  test_config_validation.py  test_ingestion.py  test_integration.py  test_registry.py  test_sprint4.py  verify_gui.py
tools/: legacy_local_runner.py
(+176 files in other folders)
