[project]
name = "multi-verse"
version = "0.1.0"
description = "A package for comparing multimodal data integration methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "docker>=6.1.3",
    "rich>=13.0",
    "pyyaml",
    "optuna",
    "psutil>=5.9.0",
    "mlflow>=2.16.0",
    "mvr-worker",
]

[project.scripts]
multiverse = "multiverse.cli_entrypoints:main"
multiverse-cli = "multiverse.runner.cli:main"
multiverse-rebuild-metrics = "multiverse.tools.rebuild_run_metrics:main"
mvr-evaluate = "multiverse.evaluate:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=1.3.0",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
]
ml-legacy = [
    "streamlit>=1.55.0",
    "scvi-tools==1.2.0",
    "scanpy==1.10.3",
    "muon==0.1.7",
    "anndata",
    "mudata",
    "pandas",
    "matplotlib",
    "numpy",
    "scib-metrics",
    "scikit-misc",
    "mowgli>=0.1.0",
    "cobolt>=0.1.0",
    "dvc>=3.67.1",
    "torch",
]

[tool.hatch.build.targets.wheel]
packages = ["multiverse"]

[tool.uv.sources]
cobolt = { git = "https://github.com/epurdom/cobolt.git" }
mvr-worker = { path = "sdk/mvr-worker", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
