[project]
name = "multiverse"
version = "0.1.0"
description = "A platform for comparing multimodal data integration methods"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "docker>=6.1.3",
    "rich>=13.0",
    "pyyaml",
    "psutil>=5.9.0",
    "mlflow>=2.16.0",
    "optuna",
    "streamlit>=1.55.0",
    # h5py is a control-plane dependency: run planning peeks into dataset .obs
    # (obs count, batch/cell-type columns) via h5py before any container runs.
    "h5py",
]

[project.scripts]
multiverse = "multiverse.cli_entrypoints:main"
multiverse-cli = "multiverse.runner.cli:main"
multiverse-rebuild-metrics = "multiverse.tools.rebuild_run_metrics:main"
multiverse-evaluate = "multiverse.evaluate:main"

[project.optional-dependencies]
worker = [
    "h5py",
    "numpy",
    "mudata",
    "anndata",
    "pandas",
]

eval = [
    "h5py",
    "numpy",
    "mudata",
    "anndata",
    "pandas",
    "muon==0.1.7",
    "scib-metrics",
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

ml-legacy = [
    "scvi-tools==1.2.0",
    "scanpy==1.10.3",
    "muon==0.1.7",
    "anndata",
    "mudata",
    "pandas",
    "matplotlib",
    "numpy",
    "scib-metrics",
    "scikit-misc",
    "mowgli>=0.1.0",
    "cobolt>=0.1.0",
    "dvc>=3.67.1",
    "torch",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=1.3.0",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
]

[tool.hatch.build.targets.wheel]
packages = ["multiverse"]

[tool.uv.sources]
cobolt = { git = "https://github.com/epurdom/cobolt.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
